@@ -93,6 +93,14 @@
       </description>
     </context-param>
 
+    <context-param>
+      <param-name>cruisecontrol.jmxport</param-name>
+      <param-value>8000</param-value>
+      <description>The port on which CruiseControl will connect to the JMX HttpAdaptor to "force" builds or view the
+          control panel. This value can be overriden using an environment variable with the same name.
+      </description>
+    </context-param>
+
     <!--
     <context-param>
       <param-name>xslt.pmd.warning.threshold</param-name>
